# cluster

./: .dockerignore  Cargo.toml  Dockerfile  README.md
allocator/: .dockerignore  Cargo.toml  Dockerfile  fleet.yaml  gameserver.yaml  template.json
allocator/manifests/: deployment.yaml  rbac.yaml  service.yaml
allocator/src/: args.rs  auth.rs  config.rs  lib.rs  main.rs
allocator/src/controller/: allocate.rs  error.rs  health.rs  mod.rs  response.rs  state.rs
allocator/src/controller/fleet/: create.rs  drop.rs  mod.rs
allocator/src/controller/gs/: allocate.rs  mod.rs
allocator/src/declaration/: host_port.rs  image.rs  player.rs  position.rs  referee.rs  team.rs  unum.rs
allocator/src/k8s/: allocation.rs  error.rs  fleet.rs  mod.rs
allocator/src/k8s/crd/: allocation.rs  fleet.rs  mod.rs
allocator/src/metadata/: annotations.rs  from_v1.rs  labels.rs  metadata.rs  mod.rs
allocator/src/schema/v1/: agent.rs  config.rs  mod.rs  policy.rs  position.rs  utils.rs
allocator/src/schema/v1/team/: mod.rs  opponents.rs
api/: Cargo.toml
api/src/: main.rs
api/src/controller/: mod.rs  response.rs
api/src/controller/error/: error.rs  mod.rs  sidecar.rs
api/src/controller/http/: mod.rs
api/src/controller/http/command/: mod.rs  trainer.rs
api/src/controller/http/control/: mod.rs  restart.rs
api/src/controller/ws/: error.rs  message.rs  mod.rs  player.rs
api/src/model/: mod.rs  signal.rs
api/src/model/room/: info.rs  mod.rs  status.rs
api/src/model/team/: info.rs  mod.rs  status.rs
client/: Cargo.toml
client/src/: agones.rs  error.rs  main.rs  proxy.rs
client/src/controller/rooms/: mod.rs
client/src/room/: config.rs  conn.rs  error.rs  mod.rs  room.rs  ws.rs
cluster/: Cargo.toml
cluster/src/controller/error/: client.rs
cluster/src/controller/ws/: ws.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/client/: client.rs  config.rs  error.rs  kind.rs  mod.rs  signal.rs  status.rs
common/src/command/: mod.rs
common/src/command/player/: init.rs  mod.rs
common/src/command/trainer/: change_mode.rs  check_ball.rs  ear.rs  eye.rs  init.rs  look.rs  mod.rs  move.rs  recover.rs  start.rs  team_names.rs
common/src/errors/: builder.rs  mod.rs
common/src/process/: error.rs  mod.rs  process.rs  status.rs
common/src/types/: ball_position.rs  ear_mode.rs  eye_mode.rs  mod.rs  play_mode.rs  side.rs
common/src/udp/: error.rs  mod.rs  udp.rs
match_composer/: Cargo.toml  Dockerfile
match_composer/src/: args.rs  composer.rs  main.rs  player.rs  team.rs
match_composer/src/agones/: labels.rs  metadata.rs
match_composer/src/info/: game.rs  player.rs  team.rs
match_composer/src/metadata/: declaration.rs  metadata.rs  mod.rs  model.rs
match_composer/src/model/: mod.rs  player.rs  team.rs
match_composer/src/policy/: policy.rs  ssp.rs
match_composer/src/policy/image/: image.rs  mod.rs  registry.rs
match_composer/src/server/: mod.rs
match_composer/src/server/routes/: mod.rs  restart.rs  start.rs  status.rs  stop.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  server.rs  state.rs
server/src/client/: addon.rs  resolver.rs  rich_client.rs
server/src/controller/: mod.rs  response.rs
server/src/controller/error/: error.rs  mod.rs  server.rs  service.rs  sidecar.rs
server/src/controller/http/: mod.rs
server/src/controller/ws/: error.rs  mod.rs  player.rs
server/src/error/: error.rs  mod.rs  service.rs
server/src/http/: gateway.rs  mod.rs
server/src/http/command/: mod.rs  trainer.rs
server/src/http/control/: restart.rs
server/src/model/: mod.rs
server/src/model/room/: info.rs  mod.rs  status.rs
server/src/model/team/: info.rs  status.rs
server/src/process/: process.rs
server/src/proxy/: manager.rs  mod.rs  udp.rs  ws.rs
server/src/service/: coached.rs  service.rs
server/src/trainer/: builder.rs  mod.rs
service/: Cargo.toml
service/src/: error.rs  lib.rs  status.rs
service/src/addons/: time.rs
service/src/agones/: agones.rs  args.rs  config.rs  mod.rs
service/src/agones/match_composer/: args.rs  client.rs  config.rs  error.rs  mod.rs  response.rs
service/src/base/: args.rs  base.rs  config.rs  mod.rs  process.rs  status.rs
service/src/standalone/: args.rs  config.rs  mod.rs  process.rs  standalone.rs
sidecar/: Cargo.toml
sidecar/src/: error.rs  lib.rs  main.rs  sidecar.rs  test.rs
sidecar/src/client/: addon.rs  error.rs  mod.rs  resolver.rs  rich_client.rs
sidecar/src/coach/: addon.rs  builder.rs  coach.rs  control.rs  mod.rs  resolver.rs
sidecar/src/coach/command/: change_mode.rs  check_ball.rs  ear.rs  eye.rs  init.rs  look.rs  mod.rs  move.rs  recover.rs  start.rs  team_names.rs
sidecar/src/coach/signal/: change_mode.rs  mod.rs
sidecar/src/config/: csv_saver.rs  mod.rs
sidecar/src/process/: builder.rs  error.rs  mod.rs  process.rs  status.rs
sidecar/src/process/config/: config.rs  csv_saver.rs  mod.rs  player.rs  server.rs
sidecar/src/server/: error.rs  mod.rs
sidecar/src/server/config/: mod.rs  player.rs  server.rs
sidecar/src/service/: coached.rs  mod.rs  service.rs
sidecar/src/service/addons/: mod.rs  time.rs
sidecar/src/trainer/: builder.rs  coach.rs  mod.rs
sidecars/match_composer/: Cargo.toml  Dockerfile
sidecars/match_composer/docs/: DESIGN.md  template.json
sidecars/match_composer/src/: agones.rs  args.rs  composer.rs  main.rs  player.rs  team.rs
sidecars/match_composer/src/agones/: annotations.rs  labels.rs  metadata.rs  mod.rs
sidecars/match_composer/src/config/: mod.rs
sidecars/match_composer/src/declarations/: init_state.rs  mod.rs  player.rs  stop_event.rs  team.rs
sidecars/match_composer/src/image/: helios_base.rs  image.rs  mod.rs  process.rs  registry.rs  ssp.rs
sidecars/match_composer/src/info/: game.rs  mod.rs  player.rs  team.rs
sidecars/match_composer/src/model/: image.rs  player.rs  team.rs
sidecars/match_composer/src/policy/: agent.rs  bot.rs  helios.rs  mod.rs  policy.rs  registry.rs
sidecars/match_composer/src/schema/: mod.rs
sidecars/match_composer/src/server/: error.rs  mod.rs  response.rs
(+87 files in other folders)
