[workspace]
members = [
    "sidecar",
    "common",
    "api",
]
resolver = "3"

[workspace.dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
arcstr = "1.2"
dashmap = "6"

log = "0.4"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
env_logger = "0.11"
