[workspace]
members = [
    "common",
    "client",
    "process",
    "server",
    "service",
    "sidecars/match_composer"
]
resolver = "3"

[workspace.dependencies]
agones = "1.56"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }
arcstr = "1.2"
dashmap = "6"

log = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
env_logger = "0.11"

