[package]
name = "allocator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

# K8s dependencies
kube = { version = "3.0.1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
agones = "1.55"

# Additional dependencies
clap = { version = "4", features = ["derive", "env"] }

