[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
default = ["restart"]
signal-parsing = []
restart = ["sidecar/restart"]

[dependencies]
common = { path = "../common" }
sidecar = { path = "../sidecar" }

futures.workspace = true
tokio.workspace = true

log.workspace = true
serde.workspace = true
arcstr.workspace = true
env_logger.workspace = true
serde_json.workspace = true
thiserror.workspace = true

dashmap = "6"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.8", features = ["tokio", "ws"] }
tower-http = { version = "0.6", features = ["trace"] }

strum_macros = "0.27.2"
