[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

tokio-tungstenite = "0.28"
reqwest = { version = "0.12", features = ["json"] }

tokio.workspace = true
futures.workspace = true
dashmap.workspace = true
arcstr.workspace = true
chrono.workspace = true

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
