[package]
name = "cluster"
version = "0.1.0"
edition = "2024"

[features]
default = []
signal-parsing = []

[dependencies]
common = { path = "../common" }

futures.workspace = true
tokio.workspace = true

log.workspace = true
serde.workspace = true
env_logger.workspace = true
serde_json.workspace = true

dashmap = "6"
uuid = { version = "1", features = ["v7", "serde"] }
snafu = {  version = "0.8", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.8", features = ["tokio", "ws"] }
tower-http = { version = "0.6", features = ["trace"] }

strum_macros = "0.27.2"
