[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
strum_macros = "0.27"

futures.workspace = true
tokio.workspace = true
arcstr.workspace = true
dashmap.workspace = true

log.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
thiserror.workspace = true
