[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[features]
default = ["restart"]
restart = []

[dependencies]
common = { path = "../common" }

agones = "1.53"
nix = { version = "0.30.1", features = ["process", "signal"] }
thiserror = "2"

axum.workspace = true
tower-http.workspace = true

futures.workspace = true
tokio.workspace = true
uuid.workspace = true
arcstr.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true

log.workspace = true
env_logger.workspace = true

[dev-dependencies]
rand = "0.10.0-rc.5"
itertools = "0.14.0"