[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "standalone-server"
path = "src/main.rs"
required-features = ["standalone"]

[[bin]]
name = "agones-server"
path = "src/main.rs"
required-features = ["agones"]

[features]
default = []
signal-parsing = []
standalone = ["service/standalone"]
agones = ["service/agones"]

[dependencies]
common = { path = "../common" }
process = { path = "../process" }
service = { path = "../service" }

futures.workspace = true
tokio.workspace = true

log.workspace = true
uuid.workspace = true
serde.workspace = true
arcstr.workspace = true
chrono.workspace = true
dashmap.workspace = true
thiserror.workspace = true
env_logger.workspace = true
serde_json.workspace = true


axum.workspace = true
tower-http.workspace = true
