[package]
name = "service"
version = "0.2.0"
edition = "2024"

[features]
default = []
standalone = []

[dependencies]
common = { path = "../common" }
process = { path = "../process" }

agones = { version = "1.53", optional = true }
clap = { version = "4.5.53", features = ["derive"] }
tokio-util = "0.7"

thiserror = "2"
futures.workspace = true
tokio.workspace = true
log.workspace = true
