[package]
name = "service"
version = "0.2.0"
edition = "2024"

[features]
default = []
standalone = []
agones = ["dep:agones", "dep:reqwest", "dep:serde", "dep:serde_json"]

[dependencies]
common = { path = "../common" }
process = { path = "../process" }

agones = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
clap.workspace = true
tokio-util = "0.7"

thiserror = "2"
futures.workspace = true
tokio.workspace = true
log.workspace = true
