[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

nix = { version = "0.30.1", features = ["process", "signal"] }
thiserror = "2"

futures.workspace = true
tokio.workspace = true
uuid.workspace = true
arcstr.workspace = true
dashmap.workspace = true

log.workspace = true
env_logger.workspace = true

#agones = "1.53"

[dev-dependencies]
rand = "0.10.0-rc.5"
itertools = "0.14.0"