[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[lib]
name = "sidecar"
path = "src/lib.rs"

[features]
default = ["restart"]
restart = []

[dependencies]
common = { path = "../common" }

agones = "1.53"
nix = { version = "0.30.1", features = ["process", "signal"] }
thiserror = "2"

axum = { version = "0.8", features = ["tokio", "ws"] }

futures.workspace = true
tokio.workspace = true
uuid.workspace = true
arcstr.workspace = true
chrono.workspace = true
dashmap.workspace = true

log.workspace = true
env_logger.workspace = true

[dev-dependencies]
rand = "0.10.0-rc.5"
itertools = "0.14.0"