[package]
name = "match_composer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5"

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

common = { path = "../../common" }

[dev-dependencies]
schemars = { version = "1", features = ["derive"] }