[package]
name = "match_composer"
version = "0.1.0"
edition = "2024"

[dependencies]
agones.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

log.workspace = true
clap.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

common = { path = "../../common" }

[dev-dependencies]
schemars = { version = "1", features = ["derive"] }
